--- a/packages/@rnw-scripts/just-task/package.json
+++ b/packages/@rnw-scripts/just-task/package.json
@@ -3,6 +3,12 @@
   "version": "0.0.2",
   "license": "MIT",
   "main": "just-task.js",
+  "dependencies": {
+    "@rnw-scripts/jest-e2e-config": "0.0.0"
+  },
+  "devDependencies": {
+    "just-scripts": "^0.36.1"
+  },
   "peerDependencies": {
     "just-scripts": "^0.36.1"
   }
