--- a/vnext/PropertySheets/React.Cpp.props
+++ b/vnext/PropertySheets/React.Cpp.props
@@ -103,7 +103,7 @@
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <RuntimeTypeInfo>false</RuntimeTypeInfo>
       <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
-
+      <AdditionalOptions>/fastfail %(AdditionalOptions)</AdditionalOptions>
       <!-- Add include directories expected by React Native C++ code and headers -->
       <AdditionalIncludeDirectories>
         $(FollyDir);
@@ -121,6 +121,7 @@
   <ItemDefinitionGroup Condition="'$(ConfigurationType)' == 'Application' OR '$(ConfigurationType)' == 'DynamicLibrary'">
     <Link>
       <SubSystem>Console</SubSystem>
+      <AdditionalOptions>/fastfail %(AdditionalOptions)</AdditionalOptions>
     </Link>
   </ItemDefinitionGroup>
 
