--- a/packages/IntegrationTest/windows/integrationtest/integrationtest.vcxproj
+++ b/packages/IntegrationTest/windows/integrationtest/integrationtest.vcxproj
@@ -15,9 +15,7 @@
     <ApplicationTypeRevision>10.0</ApplicationTypeRevision>
     <WindowsTargetPlatformVersion Condition=" '$(WindowsTargetPlatformVersion)' == '' ">10.0.18362.0</WindowsTargetPlatformVersion>
     <WindowsTargetPlatformMinVersion>10.0.16299.0</WindowsTargetPlatformMinVersion>
-    <PackageCertificateKeyFile>integrationtest_TemporaryKey.pfx</PackageCertificateKeyFile>
-    <PackageCertificateThumbprint>006EBE45F57E03EABB522A925433187D31F21373</PackageCertificateThumbprint>
-    <PackageCertificatePassword>password</PackageCertificatePassword>
+    <AppxPackageSigningEnabled>false</AppxPackageSigningEnabled>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Label="ReactNativeWindowsProps">
