Free Up Some Memory for react-native-init CI Jobs
For the integration test job I discovered we get  more reliable builds if we do build-work when daemons are not active. For react-native-init tests, we don't need Verdaccio by the time we're ready to build, so we can kill it to reclaim a bit of memory.

Testing locally, Verdaccio without any packages seems to use ~50MB while idle, which is enough to be worth reclaiming, but less than I had hoped for. Not sure if the number would be different when packages are present.

--- a/.ado/templates/react-native-init.yml
+++ b/.ado/templates/react-native-init.yml
@@ -122,6 +122,10 @@ steps:
       workingDirectory: $(Agent.BuildDirectory)\testcli
     condition: and(succeeded(), ${{ not(parameters.useNuGet) }})
 
+  # Reclaim memory used by Verdaccio to reduce the chance of build OOM issues
+  - script: tskill node
+    displayName: Kill Verdaccio
+
   - task: PowerShell@2
     displayName: List Visual Studio Components
     inputs:
