--- a/.ado/templates/react-native-init.yml
+++ b/.ado/templates/react-native-init.yml
@@ -125,6 +125,7 @@ steps:
   # Reclaim memory used by Verdaccio to reduce the chance of build OOM issues
   - script: tskill node
     displayName: Kill Verdaccio
+    condition: succeededOrFailed()
 
   - task: PowerShell@2
     displayName: List Visual Studio Components
@@ -200,15 +201,6 @@ steps:
 
   # We are experiencing random package restore failures.
   # We want to uploading the vedaccio logs to aid in diagnosing if it is verdaccio or npmjs.org
-  # To do so we have to kill the existing server because it keeps a file-lock on the log file
-  - task: PowerShell@2
-    displayName: Stop test npm server (verdaccio) to upload it's logs (on failure)
-    inputs:
-      targetType: inline
-      script: |
-        stop-process -name node
-    condition: failed()
-
   - task: PublishPipelineArtifact@1
     displayName: Upload Verdaccio.log (on failure)
     inputs:
