--- a/.ado/templates/integration-test-job.yml
+++ b/.ado/templates/integration-test-job.yml
@@ -12,7 +12,8 @@ jobs:
       vmImage: $(VmImage)
 
     variables:
-      BuildLogDirectory:  $(Build.BinariesDirectory)\$(BuildPlatform)\BuildLogs
+      - template: variables/vs2019.yml
+      - BuildLogDirectory:  $(Build.BinariesDirectory)\$(BuildPlatform)\BuildLogs
 
     timeoutInMinutes: 60 # how long to run the job before automatically cancelling
     cancelTimeoutInMinutes: 5 # how much time to give 'run always even if cancelled tasks' before killing them
